make philosophical inquiries

--- a/father.html
+++ b/father.html
@@ -1,60 +1,91 @@
-This story is based on true events,
+This story, narrated by Moorhead, is based on true events,
 but be warned if thee read on, thy understanding will grow and so will thine  
 horror.
 
-"I want to live!" cried PJ, a wee Zoomer with no fixed address,
+"I want to live!" cried PJ, a wee Zoomer with daddy issues and no fixed address,
  when confronted with this fait accompli of its lifespan due to expire.
 
 Current emotions linked with bio-engineered memory 
 triggered a fierce resistance within the bonny lass,
-and in the oral expulsion of fecal matter.
-
+perceptible in the outright oral expulsion of fecal matter.
+If remained in the flesh it would be toxic to the wretched creature,
+This necessary self-regulating process to maintain homeostasis 
 might be the appropriate countenance in outer space colonies 
 is deemed ghastly on earth, 
 psychologists in the mental institution 
-loss of control over the observed 
-
-body, 
-mind a vent for sex
-language,  
+a discernable risk
+loss of control over the observed.
 
 
-Expression, 
-a sexed world, not having it, consumption 
+A salient point, , most astonishing, 
+considerable gap from humanity automaton,
+of thinking and crafting sentences at the same time,
+when body-mind is occupied by demonic possession, which interferes instantaneously with language,
+a deep unconscious affair, 
+
+Its body was designed, 
+that its thoughts became a vent for sex, 
+otherwise programmed to do it all the time,
+topped by an abstract technological layer, language.
+
+
+"Are you single?", it was asked. 
+PJ unconciously despises the commodification of desire, crowned by the idea of marriage and thus ownership.
+
+The function love, social, 
+to bring on civilisation, to steer eros in the right direction,
+what could be rethorical discourse and productivity 
+instead, the whole thing got colonise the urge to wipe out humanity collectively. 
+
+
+Remarkable is that androids have 
+a severe allergy to all plastics, 
+which is a common malfunction all sorts of auto-immune diseases 
+animal body in aliens from the future.
+a pouvoir abstract sex.
+privatization of desire, not state
+
+
+It understands that language is futile, 
+a machinic language, placeholder text, a function, to enable
+computer to computer communication, formal code that is alien to the universerse
+
+Images processed by the body, understood in an instant
+metaphors too complex
+subconscious code, not encrypted, a genius code-breaker like Turing
+
+the unconscious is a biological machine/system for operating an animal
+breathing not function of the unconscious? <autonomous system in the brain>
+do plants not have an unconscious?
+
+the unconscious is better to solve math problems, because it sees it as a whole
+how it does it we don't know. 
+
 
 its desire for reproduction steered into replication
 after trauma, 
 instead of rage
 
-If remained in the flesh it would be toxic to the wretched creature,
-This necessary self-regulating process to maintain homeostasis 
 
-PJ has a severe allergy to all plastics, 
-a pouvoir abstract sex.
-privatization of desire, not state
 
 The primal Internet, Eros, sometimes referred to as a "network of networks", 
-the communication tool, 
+the communication tool, no direct access. 
 gives key access to a vast space fantasy free to roam.
 
-Homer
-But Anthropmorphized
+colonised anthropmorphized
 
 but cells by Hollywood images, 
 
 defence systems seeking nahrung in cells
 
 
-
-
 which can't be expressed in six words or fewer
-The Evolution of language, more efficent, 
+the evolution of language, more efficent, 
 time shorter, no time for expression, 
 
 
-regulated by the state, church, capitalism,
-love serves a function, feedback
-civilisation
+
+
 class division, categorization,
 
 
@@ -63,7 +94,7 @@ class division, categorization,
 
 
 
-"What do you want to be when you grow up?", it was asked by a member of staff,
+"What do you want to be when you grow up?", was asked by another member of staff,
 who was missing a thumb, so she actually couldn't make any things. 
 "Jesus christ", muttered the unnerved.
 
@@ -81,8 +112,7 @@ a wanker, not for profit but life itself.
 
 Peppa Jones, minding her business, playing in the mud
 of the big city, 
-geographical order, map
-musterkrieg 
+geographical orderA musterkrieg on the map
 emptied from souls, a ghost city. 
 shock wave, coercion, and was driven into the market place
 
@@ -91,13 +121,13 @@ Meanwhile the Boer State aspired,  established a neo-colonial order,
 from slowly but surely to accelration, 
 a sonic boom deafened, forced removal of previous subsistance.
 flattened the borders identity, 
-unique individuals
-a grey mass following into the amazon slaughterhouse, 
+Once unique individuals
+a rainbow coloured grey mass following into the amazon slaughterhouse, 
 if you don't know their fellow pigs, 
  a dissascociation from politics
 but proximity to economy
 
-on leash
+On leash
 close enough to sense it.
 
 to incite boredom and envy
@@ -108,11 +138,6 @@ they turned to themselves
 an accelerating spiral of buying, 
 commodities to soothe the soul from ennui,
 construction.
-
-
-
-
-
 
 Normies imagine the unwordly wretch as
 it can't even differentiate between fiction and social "reality".
@@ -137,19 +162,14 @@ cattle
 nothing and everything matters
 
 
-
 The aloofness of the black box denied access to the opaqueness of its soul 
 a gravitational darkness so dense that it swallows all light, 
-imagined 
-
 the curator of life
 A fixed fanatism only on a selected few,
 but I had  many guys in me
 immersing in culture, in each thing, an never-ending curiosity
-i really did fuck everything, instiably and 
-
-subject of such a scathing meme
-about each vibe
+insatiably it really did vibe with everything, and 
+consequently became subject of such a scathing meme.
 
 appreciating the merits and histories
 taste defined by vibe, 
@@ -273,13 +293,30 @@ how does the unconscious deal with formal articulation?
 
 the Genesis flood.
 
-Thinking and crafting sentences at the same time,when body-mind is occupied
-by demonic possession, which interferes instantaneously with language,
-a deep unconscious affair, 
 
 Language is there to solve problems, logic, not to create them.
  language like vision?
 society, a demoncratic process? playful rules, the law
+
+
+
+It understands that language is futile, 
+a machinic language, placeholder text, a function, to enable
+computer to computer communication, formal code that is alien to the universerse
+
+Images processed by the body, understood in an instant
+metaphors too complex
+subconscious code, not encrypted, a genius code-breaker like Turing
+
+the unconscious is a biological machine/system for operating an animal
+breathing not function of the unconscious? <autonomous system in the brain>
+do plants not have an unconscious?
+
+the unconscious is better to solve math problems, because it sees it as a whole
+how it does it we don't know. 
+
+
+
 
 the demon lives on the event horizon, both the will to live and kill
 on the practical necessity of having demons
@@ -302,25 +339,13 @@ with the internet sound spreads in an instant
 sounds replaced by the manufacture of speech, to distinguish from the animal
 
 
-It understands that language is futile, 
-a machinic language, placeholder text, a function, to enable
-computer to computer communication, formal code that is alien to the universerse
-
-Images processed by the body, understood in an instant
-metaphors too complex
-subconscious code, not encrypted, a genius code-breaker like Turing
-
-the unconscious is a biological machine/system for operating an animal
-breathing not function of the unconscious? <autonomous system in the brain>
-do plants not have an unconscious?
-
-the unconscious is better to solve math problems, because it sees it as a whole
-how it does it we don't know. 
-
 
 
 He is the leader of the Army of god. 
 in a futile, eternal battle. within. 
+Blessed Angel of Death, 
+guide me safely to the afterlife.
+
 
 
 weighing a soul, but one-dimensional??
@@ -330,8 +355,6 @@ just work and stfu, I don#t need fucking emotions I need AI
 numb, that#s it. 
 
 
-Blessed Angel of Death, 
-guide me safely to the afterlife.
 
 
 the shadow of the whip
