--- a/kubany.html
+++ b/kubany.html
@@ -11,29 +11,21 @@
 <div class="container">
 
 <p>
-It was a dry, hot and sunny day,
-when a more pleasant part of the expedition began to form 
-on the Borderlands of Bohemia, 
-which reflected the binary logic of the multiplicity all to well. 
-
-The positive outlook on the much greener grass, 
-embarking  on a Ceske Drahy, upon a journey with its
-tracks of tight curves and steep inclines.
-
+It was a dry and hot summer's day, 
+wildflower meadows flourished when left to nature,
+which reflected the binary logic of the trinity all to well. 
+when the expedition began to form in the Borderlands of Bohemia, 
+The positive outlook on embarking  on a Ceske Drahy, upon a journey with its
+tracks of tight curves and steep inclines lifted our spirits.
 We were eager to leave the territory of conflict, 
 and the ,for my taste, too cold and flat continental surfaces, 
 and its politics of preemptive power to colonize the future land. 
 
-One should object surfaces, 
-rather than falling for the imbeciltiy of hollowing out too deep, 
-excavating infinite meaning, which is intrinsic in the earth, 
-and leave it for evermore. 
 
-where reconnaissance aircrafts hovering over 
-to pinpoint the slightest nullity, 
-react with friendly fire, 
-I was left with 
-joining this cyberwar and 
+A heavenly space where the sky reconnaissance aircrafts were hovering over to pinpoint the slightest nullity, 
+and react with friendly fire, 
+so I was left with 
+to join this cyberwar and 
 digging trenches, just to fill them by digging another one
 with the absence of another writer with whom I would be able 
 to experiment with current philosophy 
@@ -49,7 +41,11 @@ of not speaking trauma.
 
 turned into a cyberwar, a militarized deconstruction in real time
 
-
+Teached me the lesson,
+to object surfaces, 
+rather than falling for the imbeciltiy of hollowing out too deep, 
+excavating infinite meaning, which is intrinsic in the soil, 
+and leave it for evermore. 
 
 Confused I was wandering the deserted station, 
 a junction   
@@ -66,12 +62,22 @@ left room for much speculation.
 
 </p>
 
-This palimpsest is an attempt to describe 
-the events that occured in the fall of 2022.
 
-I am trying to imprint meaning on this hideously ugly inked coating,
+<p>
+This palimpsest description 
+of the events that occured in the fall of 2022.
+
+All started with an alchemical experiment, 
+cosmogenic  chemical process, 
+distill to get to substance /quintessence. 
+
+which strives for unity, at the same time for individuation,
+life spiralling towards 0.
+
+
+I was trying to imprint meaning on this hideously ugly inked coating,
 veiling a supposedly innocuous device, 
-which is an intermediate thing between a tool and a machine.
+which is an intermediate thing between a tool and a warmachine.
 
 A system with deficiencies
 but the analogous application permits
@@ -145,7 +151,6 @@ The fear of death makes us butchers for own survival.
 </p>
 
 
--------------------------------------------
 
 
 <p>
@@ -555,6 +560,14 @@ can't grasp the dynamic beyond
 <p>
 My grandfather was born at at the foot of the majestic Kubany and knew about the 
 rites of the Old Ones, even practicing them.  
+There were two young in the litter of the wolf, 
+and Shewolf became the leader of the  pack.  
+One can say this were the ancestors of the we'rewolf pack.  
+However, this was  a sign under the the two massive twin peaks belonging to stomping ground.  
+Many opted for careers in Eisenbahn and Bleistift in Amerika, 
+humans who wear the redskin of The Apache, 
+to mimic its reliant design combat
+the best of nature hidden in the matrix in the military-industrial complex. 
 
 Over time it dawned on me that the bizarre stories of my grandfather, 
 were actually nonsense and a large share of the Great Wisdom.
@@ -562,21 +575,16 @@ The puzzling fragments were actually hints to further hollows
 in the cryptic thicket of the Bohemian Forest.
 Then I had to fill them with speculations, which in turn 
 had to be assembled with existing structure. 
-Spreading revelations in a magnificent horrific whole, I was bound to.
-
-There were two young in the litter of the wolf, 
-and Shewolf became the leader of the  pack.  
-One can say this were the ancestors of the we'rewolf pack.  
-However, this was  a sign under the the two massive twin peaks belonging to stomping ground.  
-Then opted for careers in Eisenbahn and Bleistift
-
-
+Manifestations in a magnificent horrific whole, I was bound to.
 
 It was foretold that if there will 
 be no distinction between man and woman, 
 will be the end of the world. 
-what might sound as fascist fear to a liberal hipster
+What might sound as fascist fear to a liberal hipster
 a grey mass out of once colourful people. 
+but colourful matrix outside. 
+siemandl
+
 
 If a church is built the wrong way round, 
 'der aufgang aleer auf aufgänge regiert das all' 
@@ -591,11 +599,11 @@ the grave
 <p>
 when follow a train of thoughts 
 infected into the tunnel 
-zombie
+the zombie apocalypse
 </p>
 
 
-siemandl
+
 
 emitted debilitating rays if they had been impregnatied with some kind of radioactive material 
 
@@ -812,17 +820,11 @@ annihilation.
 
 
 </p>
-
 intelligence explosion, at a speed of milisecond, singularity,
 human extinct. 
 where speed and intelligence go to infinity
 and destroys The Future of Life Institute. 
 
-They were just wearing the redskin of The Apache, 
-which was reliant design, the best of nature. mimic
-AH-64
-32 vs 64bit
-M230 Chain Gun
 
 
 
