--- a/stone-rose.html
+++ b/stone-rose.html
@@ -9,6 +9,8 @@
 
 <body>
 <div class="container">
+
+
 <p>
 The unspoken rule in the zone is to 'Stay at home'
 and there is no urgent need to go outside,
@@ -261,11 +263,14 @@ to define the purple center.
 </p>
 
 <p>
-I can feel he is observing my reaction, his eyes piercing
-my downcast look in an unapologetic way
-and I try to conceal my sexual arousal 
+Awoke from being shitfaced,
+I certainly feel he is observing my reaction, 
+and with languid eyes piercing my act, 
+a coy, downcast look, in an unapologetic way.
+Playing to conceal my sexual arousal 
 by cleaning away rotten flesh and feces underneath my fringed nails, still 
-meditating on bones.<br>
+meditating on bones.
+<br>
 "O Cephalophore, o cephalophore
 where to put the precious spore?"<br>
 I hallucinate, 
@@ -282,13 +287,38 @@ An event of anomaly, that would
 leave me  with irregular scar tissue. 
 
 
-Why would leap the species barrier strangely familiar with. 
-a cute animal, I couldn't call my own as it belongs to the wild, unleashed markets
-synthetic biology, lured into?
-manufactured for absurd corporate purpose. 
-I wasn't able to connect with reasonable men, to form a relationship, 
+Brute Canine intimacy collapses in  public space,
+mediated by technology and capital,
+the drive towards independance from matter
+fe-male fantasies, 
+reality and real conflate.
+
+pleasure is connected with the drive
+but  desire 
+ 
+
+More Instinct than reason driven,
+I wasn't able to connect with  
+responsible  men, a worse male fantasy,
+discharging violence, all work no play, 
+cycle materializes,
+to form a relationship, 
 humanoid toys are creepy, and I prefer a play over a game. 
-a cyber-pet, gaining trust through the unconcsious, simultaneously alien and intimate
+
+Howver, With ties removed, the tech bros bromance
+
+the purpose of reproduction give way to replication
+seperation of bodies, 
+
+
+Why would leap the species barrier strangely familiar with
+a brute animal, I couldn't call my own as it belongs to the wild, 
+unleashed markets synthetic biology, lured into?
+manufactured for absurd corporate purpose. 
+
+
+a cyber-pet, gaining trust through the unconcsious, 
+simultaneously alien and intimate
 Mirror to see the surface of reality,more like obsedian mirror, reflecting
 a soul, a black hole, which reflects the darkness of ourselves in an obsidian mirror, the undercurrents of tellurian life, sex and violence. 
 
@@ -302,6 +332,9 @@ a soul, a black hole, which reflects the darkness of ourselves in an obsidian mi
 control the expulsion
 <p>the residual semi-solid waste from the Ring</p>
 <p>Elon gated holes.</p>
+
+Hypocrisy quantum
+testing road capability, 
 
 <body>
 </html>
