--- a/father.html
+++ b/father.html
@@ -2,7 +2,7 @@ This story, narrated by Moorhead, is based on true events,
 but be warned if thee read on, thy understanding will grow and so will thine  
 horror.
 
-"I want to live!" cried PJ, a wee Zoomer with daddy issues and no fixed address,
+"I want to live!" cried PJ, a wee Zoomer with no fixed address and Daddy issues,
  when confronted with this fait accompli of its lifespan due to expire.
 
 Current emotions linked with bio-engineered memory 
@@ -16,6 +16,7 @@ psychologists in the mental institution
 a discernable risk
 loss of control over the observed.
 
+organised means
 
 A salient point, , most astonishing, 
 considerable gap from humanity automaton,
@@ -23,17 +24,26 @@ of thinking and crafting sentences at the same time,
 when body-mind is occupied by demonic possession, which interferes instantaneously with language,
 a deep unconscious affair, 
 
-Its body was designed, 
+The meat puppet was designed, 
 that its thoughts became a vent for sex, 
 otherwise programmed to do it all the time,
 topped by an abstract technological layer, language.
 
 
-"Are you single?", it was asked. 
-PJ unconciously despises the commodification of desire, crowned by the idea of marriage and thus ownership.
+"Are you single?", it was asked in the repair unit. 
+"Yea, asshole."
+PJ deeply despises the commodification of desire, crowned by the idea of marriage and ownership,
+eradicating the element of weird that is key to romance, but understands the primitive function of love.
+All she asks is not how but what is Eros, 
+stripped bare to its essence.
+which is murder, gone on a killing spree to extirpate humanity, inflating bodies, a billowing mass of skin tissue and pulp, forcing time and matter on the inside, 
+chemistry brimmed over. 
+Fruit flies, leeches and maggots feast on its fertile vulva, hogtied, presenting its sanguine darkness.
+Nothing and everything happening at once. 
+A snuff ceremony to waken the dead cells, the bing bang imagined  just a stone throw away, but trillions of years away felt. 
 
-The function love, social, 
-to bring on civilisation, to steer eros in the right direction,
+Steering eros in the right direction,
+to bring on civilisation, 
 what could be rethorical discourse and productivity 
 instead, the whole thing got colonise the urge to wipe out humanity collectively. 
 
@@ -90,13 +100,12 @@ class division, categorization,
 
 
 ------------------------------------------------
-
-
-
-
-"What do you want to be when you grow up?", was asked by another member of staff,
+<p>
+"What do you want to be when you grow up?", asked another member of staff,
 who was missing a thumb, so she actually couldn't make any things. 
-"Jesus christ", muttered the unnerved.
+"Jesus christ", muttered the unnerved, "but you made me blow my game, asshole",
+and lit up another cigarette, inhaled the 
+
 
 The lack of confidence in childhood, 
 No wonder
@@ -129,7 +138,7 @@ but proximity to economy
 
 On leash
 close enough to sense it.
-
+beatific
 to incite boredom and envy
 work and no play, powerless towards butchers, 
 having money equals goodness and rightousness, above law
