--- a/kubany.html
+++ b/kubany.html
@@ -12,11 +12,19 @@
 
 <p>
 It was a dry and hot summer's day, 
+neatly cut grass burnt brown and 
 wildflower meadows flourished when left to nature,
-which reflected the binary logic of the trinity all to well. 
-when the expedition began to form in the Borderlands of Bohemia, 
+which reflected the binary logic of the trinity all too well, 
+when the expedition began to form in the Borderlands of Bohemia.
+
 The positive outlook on embarking  on a Ceske Drahy, upon a journey with its
 tracks of tight curves and steep inclines lifted our spirits.
+Miss Bryant is the opposite hypertextual controlled 
+link up. The best we can have is pulp, if I choke put my foot on the throttle
+set the engine on fire, smoke pollutes the skies and falls down as black icicles
+Miss Bryant is at the centre though, not the edge
+--She's perfect
+
 We were eager to leave the territory of conflict, 
 and the ,for my taste, too cold and flat continental surfaces, 
 and its politics of preemptive power to colonize the future land. 
@@ -28,7 +36,7 @@ so I was left with
 to join this cyberwar and 
 digging trenches, just to fill them by digging another one
 with the absence of another writer with whom I would be able 
-to experiment with current philosophy 
+to experiment with current Bataillian philosophy 
 and to divert me from the terrors of deconstruction.
 A fellow  sonic blowing a French horn, experience vibrating the body, 
 a virtual, implanted memory, that never happened. 
@@ -103,12 +111,14 @@ and subsequently the negative feedback given.
 
 a circuit not a cycle. 
 
-I am banging so hard, a recording of streaming to become immortal
-
 The gapping wound widens, stretched wide open by her own hands, 
+I am banging so hard, a recording of streaming to become immortal, a crack surrendered, 
+a natural losened hole as if ruined by magic
+An obsolute puppet, like living dead, 
 
 
 So how does it function?
+I ask, how do you get to be scrap?
 vibrating diaphragm sets in motion the pen 
 which in turn writes on the moving lubricant
 strip 
@@ -120,7 +130,8 @@ a turing complete.
 Typing blind, can't see what I write, on this ancient machine
 rwx ?? who reads, write, executes, allowed rule?
 previously a men's world, now scapegoat for mistakes. 
-world, ball.  
+world, ball. 
+I am the most inhumane writer of morbid.  
 
 can't simulate the real, coz it's real, immidiate command and control
 communication, urbanized warfare. 
@@ -253,16 +264,18 @@ I found a shining example of hyperaccelerationism
 Everything was about control, the residents, including the newly arrived immigrants,who were lured into it, truly believed in it, how out of control it really was. 
 
 
-atavism=reappearance of genetic old features, Moorhead is the werewolf-rat, Erin is her past
-animality is the undercurrent of modernity and reality
-
-unavoidable experiments, went into combat
-"thought-experiments" not from armchair but the battlefield
-
 An unpleasant MI5SON, easy for bellends 
 bureau from the security service, who are into domestic counter-intelligence. 
 Like Matthew Fox, known as K, co-founder and my best fiend
 in this intelligence machinery. 
+unavoidable experiments, went into combat
+"thought-experiments" not from armchair but the battlefield.
+communication between materialists and vitalists
+problematic, 
+the common ground is the brain, that has been shattered. 
+idea of spiritual appearance which was casted in the fascist realm?soul
+materialsts hardened
+
 
 
 As a veteran analyst and natural philosopher, 
@@ -312,7 +325,9 @@ I sent K a letter invisible ink.
 </p>
 -----------------------------
 
-
+<p>
+atavism=reappearance of genetic old features, Moorhead is the werewolf-rat, Erin is her past
+animality is the undercurrent of modernity and reality
 
 
 On orders from above, 
@@ -412,9 +427,10 @@ who is not bloated with reason and morality.
 
 <p>
 From afar I see a green mountain.
-Away from the main path, a small footpath into the  virgin forest. 
+A small serpentine footpath, true love travels on a gravel road, 
+into the virgin forest. 
 On our way I notice a goshawk, motionless in the sky, until it fell from the sky, 
-to devour its cute prey. 
+to devour its cute prey,
 I wait for some action, but it kept disappearing.
 
 Autonomous engineered matter, intelligent materials
@@ -475,7 +491,9 @@ nuclear family.
 I see a couple heading towards me, 
 the man walks in front, the woman behind.
 We greet each other politely,
-oddly strange in this hostile solitude.
+oddly strange in this hostile solitude, wild habitat.
+
+
 The first impulse of asking them about 
 location determination,
 that there must be an exit close.
@@ -495,6 +513,10 @@ On first thought, wealthy people must live there in this grande mansion
 but here in the middle of nowhere?
 Suddenly it was gone, and I see only,
 time is creeping on from behind.
+
+
+
+
 
 There is a high peak of this mountain ridge
 where the warm sun reaching our skin, but cooling down in the shadows of deep forest.
