--- a/kubany.html
+++ b/kubany.html
@@ -142,10 +142,11 @@ in a pulsating, pounding beat, that is connecting me with the beyond.
 Sama-zan in this ceremony, 
 a rave of self-destruction
 as its repetitive rythm 
-
 in a frequency spectrum 
-
 will awake the Krakonoš.
+
+
+Fetishizing the map, Baudrillard, the territory is now mine. 
 
 spread the word
 need to bring into existance
@@ -158,7 +159,7 @@ pant through nose and mouth.
 
 
 The fear of death makes us butchers for own survival.
-
+mocking the corpse
 </p>
 
 
@@ -309,6 +310,8 @@ Race, gender, sexuality, don't matter anymore, it's class.
 I am classified as genetic trash even though I posess natural
 machine vision on my left eye, on this geometric field of the chess game
 random rectangles in different sizes with colors from the RGB spectrum
+filling the colon with air, pressure eye pops
+Patient 0, 
 my hearing performance is extraordinary
 interpretation sounds ghosts.
 The frames switch on and off
@@ -591,6 +594,19 @@ humans who wear the redskin of The Apache,
 to mimic its reliant design combat
 the best of nature hidden in the matrix in the military-industrial complex. 
 
+A land Bloodlands, women and daughters
+sprayed with water, frozen bodies shattered into small 
+particles 
+blood and soil, 
+men and sons, workforce
+full of envy, scorn, abilities the degenerated brutish apes are not capable of. 
+soap and lampshades, 
+murder keeping paradise clean, 
+but lazy to tidy up after their 
+drunken fueled orgies, westerners behaviour into all corners of the world, exemplaryli, perfectly tidy in every aspect, strict to rule and as they are the ideal /idols, 
+the others have to do it. 
+
+
 Over time it dawned on me that the bizarre stories of my grandfather, 
 were actually nonsense and a large share of the Great Wisdom.
 The puzzling fragments were actually hints to further hollows
@@ -616,39 +632,84 @@ st peter, praying to west.
 (pope , praying looking at the people) from 18th century, better built in the market 
 the grave 
 
-</p>
 
 <p>
 when follow a train of thoughts 
 infected into the tunnel 
 the zombie apocalypse
+The zombies, with an idiotic grin on their faces, 
+in their diazepam slumber
+London Liverpool Station, the train terminates here. 
 </p>
 
 
+<p>
+Hanson, Moorhead, Bryant, 
+I infected them and countless more, 
+simply by transgressing their orbits.  
+I turned viral to purify their putrid flesh. 
+which they unconditionally embraced, 
+The dead girls, dissolving in one another, 
+ became one in the dark-knight-body.
+Trapped there only to breathe, sensory deprivation, 
+down to chemical composition and biological bioreceptivity,
+a human caterpillar (what was that film, south park).
+Laid to waste, abandoned, parasites
 
 
-emitted debilitating rays if they had been impregnatied with some kind of radioactive material 
-
-
-Bryant also just can speculate, provoked it.
-fissions by accident, without reason,
-but when did this happen?
-Was there an idle God?
-
-better morphing, 
+The dust yearns for the wet. 
 but why did i manifest, to provoke violence?
 intelligence? maybe I am time?
 the world does not like what it doesn't know.
 
+My coat, full of grime and stains, displays something truthful
+the ticks vomit 
+that primes the flesh for further morphing. 
 
-Culture is dead said the graphity on the wall of the ramshackle mansion, 
+"Culture is dead", said the orange graphity on the wall of the ramshackle mansion, 
 nearby the warm moldau, which is now a pig farm.
+
+The wild boars thrive, 
+emit debilitating rays if they had been impregnatied with some kind of radioactive material.
+
 
 The wind, leaves are falling in masses, natural agent o.
 Then I see the cyclist again, he aged dramatically. Struggling to 
 on his way down, sliding, even stopping to not fall on his
 spiralling journey downwards.
 Was here the Lord of the Mountains involved?
+
+
+
+But if you ask, 
+Am I under their skin
+or am I wearing their coat?
+Neither, 
+
+permeating the membrane, selective barrier. 
+I'm erratic sound. 
+I am the dark-bringer, the bottom-dweller. 
+
+I'm always wearing a double coat. 
+I took this shape, takes it in material form. 
+short hair, extrem temp
+guard hair, repel moisture and dirt
+
+annihilation. 
+helmet, not only focus but immersed. 
+no need for attention.
+directly onto the eye
+disturb not possible, 
+
+
+bootstrapped
+flame thrower.
+The spiral tornado, destruction, wormhole. 
+
+
+
+
+
 
 
 
@@ -811,34 +872,6 @@ whirling dust, clusters of vortexes.
 
 
 <p>
-Hanson, Moorhead, Bryant.
-I infected them and countless more, 
-simply by transgressing their orbits.  
-I turned viral to purify their putrid flesh. 
-which they unconditionally embraced, 
-To became one in the dark-knight-body, 
-that primes the flesh for further transformation. 
-The dust yearns for the wet. 
-
-
-
-
-But if you ask, 
-Am I under their skin
-or am I wearing their coat?
-Neither, 
-
-permeating the membrane, selective barrier. 
-I'm erratic sound. 
-I am the dark-bringer, the bottom-dweller. 
-
-I'm always wearing a double coat. 
-I took this shape, takes it in material form. 
-short hair, extrem temp
-guard hair, repel moisture and dirt
-
-annihilation. 
-
 
 
 </p>
@@ -847,11 +880,13 @@ human extinct.
 where speed and intelligence go to infinity
 and destroys The Future of Life Institute. 
 
+The future passed unnoticed, 
+integrated in the loup.
+Eternal recurrance. 
+is now past. 
 
+leave destruction behind, 
 
-
-c.r.w. nevinson paint
-Kf41 Lynx
 how to get consciousness, thru communion. intellect.
 cells just survive, 
 survival is meaningful, not anymore. 
@@ -859,25 +894,10 @@ survival is meaningful, not anymore.
 no communion themselves.
 no memory there. 
 I can not remember, but is in the flesh (DNA)
-
-helmet, not only focus but immersed. 
-no need for attention.
-directly onto the eye
-disturb not possible, 
-
-
-bootstrapped
-flame thrower.
-The spiral tornado, destruction, wormhole. 
-
-
-
-leave destruction behind, 
-
-The future passed unnoticed, 
-integrated in the loup.
-Eternal recurrance. 
-is now past. 
+Bryant also just can speculate, provoked it.
+fissions by accident, without reason,
+but when did this happen?
+Was there an idle God?
 
 
 </div>
