--- a/stone-rose.html
+++ b/stone-rose.html
@@ -12,6 +12,20 @@
 
 
 <p>
+Erin is somehow fascinated by the holocaust of the world, murder is always present
+digs out Charlie
+stares into her black holes, 
+a strange lightness is in there.
+just to be murdererd and tortured over and over again.
+murder orgasm frenzy
+disturbed refusing any utopian proposals
+ruined  but up to play
+a binary between form and deformed.
+Future? Which future? Not into your future. 
+No future in the zone, 
+
+
+
 The unspoken rule in the zone is to 'Stay at home'
 and there is no urgent need to go outside,
 as home offers countless amenities and attentive service for anybody.
